--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <body>
     <h1>Simon Game Made On JavaScript</h1>
 
+    <h2>Press any Key To Start the Game</h2>
     <div class="btn-container">
       <div class="line-one">
-        <div class="btn">btn1</div>
-        <div class="btn">btn2</div>
+        <div type="button" class="btn red">btn1</div>
+        <div type="button" class="btn green">btn2</div>
       </div>
       <div class="line-two">
-        <div class="btn">btn3</div>
-        <div class="btn">btn4</div>
+        <div type="button" class="btn yellow">btn3</div>
+        <div type="button" class="btn purple">btn4</div>
       </div>
     </div>
 
