--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <h2>Press any Key To Start the Game</h2>
     <div class="btn-container">
       <div class="line-one">
-        <div type="button" class="btn red">btn1</div>
-        <div type="button" class="btn green">btn2</div>
+        <div type="button" class="btn red" id="red">btn1</div>
+        <div type="button" class="btn green" id="green">btn2</div>
       </div>
       <div class="line-two">
-        <div type="button" class="btn yellow">btn3</div>
-        <div type="button" class="btn purple">btn4</div>
+        <div type="button" class="btn yellow" id="yellow">btn3</div>
+        <div type="button" class="btn purple" id="purple">btn4</div>
       </div>
     </div>
 
